# talking-head-anime-4-demo

./: .gitignore  Dockerfile  docker-build.sh  docker-run.sh  entrypoint.sh  environment-mac.yaml  example.py  example_image.py  example_morpher.py  example_video.py  pyproject.toml  requirements.txt
data/character_models/lambda_00/web_model/body_morpher/: model.json
data/character_models/lambda_00/web_model/face_morpher/: model.json
data/character_models/lambda_01/: face_morpher.fp32.tflite
data/character_models/lambda_01/saved_model/body_morpher/: fingerprint.pb  keras_metadata.pb  saved_model.pb
data/character_models/lambda_01/saved_model/body_morpher/variables/: variables.data-00000-of-00001  variables.index
data/character_models/lambda_01/saved_model/face_morpher/: fingerprint.pb  keras_metadata.pb  saved_model.pb
data/character_models/lambda_01/saved_model/face_morpher/variables/: variables.data-00000-of-00001  variables.index
data/character_models/lambda_01/web_model/body_morpher/: model.json
data/character_models/lambda_01/web_model/face_morpher/: model.json
data/character_models/lambda_02/: body_morpher.pt  character_model.yaml  face_morpher.pt
data/character_models/lambda_02/web_model/body_morpher/: model.json
data/character_models/lambda_02/web_model/face_morpher/: model.json
data/distill_examples/lambda_02/: config.yaml
src/tha4/app/: character_model_ifacialmocap_puppeteer.py  character_model_manual_poser.py  character_model_mediapipe_puppeteer.py  full_manual_poser.py
