[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tha4"
version = "0.1.0"
description = "Demo code for Talking Head(?) Anime 4"
authors = [
    {name = "Pramook Khungurn", email = "pong@pixiv.co.jp"},
]
readme = "README.md"
requires-python = ">=3.10, <3.11"
license = {text = "MIT"}
 
[tool.setuptools]
package-dir = { "" = "src" }
